# Smorasmanagement

./: .replit  DEPLOYMENT_BACKUP_GUIDE.md  DEPLOYMENT_GUIDE.md  EXTERNAL_DATABASE_GUIDE.md  GIT_OPERATIONS.md  README.md  auto_restore_after_deploy.py  backup_production_data.py  check_db_counts.py  check_team_count.py  check_teams.py  check_users.py  configure_external_postgres.py  cookies.txt  create_admin.py  create_dev_admin.py  create_postgres_db.py  create_production_admin.py  debug_deployment_restore.sh  deploy_with_external_db.sh  deployment_post_restore.sh  deployment_protect.py  deployment_restore_test.py  ensure_postgres.py  find_template_errors.py  find_template_syntax_errors.py  fix-db.sh  fix_database.py  fix_git_issues.py  fix_production_database.py  fix_production_postgres.py  fix_template_errors.sh  fix_template_literals.py  force_deployment_restore.py  force_postgres_migration.py  force_postgres_production.sh  generate_pdf_documentation.py  git-manager.sh  manage_git.py  mark_production.sh  (+25 more)
attached_assets/: Pasted--players-id-1-first-name-Aksel-last-name-T-u00f8rvik-Pedersen-id-2-fir-1742683794803.txt  Pasted-TemplateSyntaxError-at-team-match-sessions-12-pitch-Could-not-parse-the-remainder-total-perio-1743038097907.txt
deployment/: .gitkeep  DEPLOYMENT_IN_PROGRESS  IS_PRODUCTION_ENVIRONMENT  PERMANENT_PRODUCTION_MARKER  db.sqlite3  db.sqlite3.20250328_003016.bak  deployment_backup_20250328_084135.json  deployment_backup_test_backup_20250327_214629.json  deployment_db.json  deployment_db.json.20250328_003011.bak  deployment_db.sqlite  restoration_log.txt  (+3 more)
(+249 files in other folders)
